--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "d3": "^7.9.0",
+    "d3-org-chart": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tauri-apps/api": "^1",
+    "@tauri-apps/cli": "^1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1",
-    "@tauri-apps/cli": "^1",
-    "@tauri-apps/api": "^1"
+    "vite": "^5.3.1"
   }
 }
